Call internal executor method to ensure at least 1 worker